removed ' wrapped around image url in global css styling, to successfully fix error 404 error fetching images

--- a/ngPlanty/src/styles.css
+++ b/ngPlanty/src/styles.css
@@ -9,7 +9,7 @@ html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 body .about-container {
-  background-image: url('assets/dalle_image_of_outdoor_canopy.jpg');
+  background-image: url(assets/dalle_image_of_outdoor_canopy.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
@@ -21,7 +21,7 @@ body .about-container {
 }
 
 body .home-container {
-  background-image: url('assets/dalle_image_living_room_garden.jpg');
+  background-image: url(assets/dalle_image_living_room_garden.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
